resolve plain ide problem and replace expensive getText call